// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPassword components basic render 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "width": 750,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F8F8F8",
          "borderColor": "rgba(0,0,0,0.08)",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "space-between",
          "marginVertical": 8,
          "paddingHorizontal": 16,
          "width": 718,
        }
      }
    >
      <View
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          autoFocus={true}
          caretHidden={true}
          keyboardType="numeric"
          maxLength={6}
          onChangeText={[Function]}
          rejectResponderTermination={true}
          style={
            Object {
              "height": 60,
              "opacity": 0,
              "width": 230,
              "zIndex": 0,
            }
          }
          underlineColorAndroid="transparent"
          value=""
        />
        <TouchableWithoutFeedback
          onPress={[Function]}
        >
          <View
            style={
              Object {
                "height": 60,
                "justifyContent": "center",
                "marginLeft": 20,
                "position": "absolute",
                "width": 668,
                "zIndex": 20,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "rgba(51,51,51,0.13)",
                  "fontSize": 20,
                }
              }
            >
              enter password
            </Text>
          </View>
        </TouchableWithoutFeedback>
      </View>
      <View
        style={
          Object {
            "position": "absolute",
            "right": 10,
          }
        }
      >
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "height": 50,
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#0076FF",
                  "fontSize": 12,
                  "fontWeight": "bold",
                },
                Object {
                  "color": "#0076FF",
                },
              ]
            }
          >
            random
          </Text>
        </TouchableOpacity>
      </View>
    </View>
  </View>
</View>
`;

exports[`getPassword components passwordColor render 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "width": 750,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F8F8F8",
          "borderColor": "rgba(0,0,0,0.08)",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "space-between",
          "marginVertical": 8,
          "paddingHorizontal": 16,
          "width": 718,
        }
      }
    >
      <View
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          autoFocus={true}
          caretHidden={true}
          keyboardType="numeric"
          maxLength={6}
          onChangeText={[Function]}
          rejectResponderTermination={true}
          style={
            Object {
              "height": 60,
              "opacity": 0,
              "width": 230,
              "zIndex": 0,
            }
          }
          underlineColorAndroid="transparent"
          value=""
        />
        <TouchableWithoutFeedback
          onPress={[Function]}
        >
          <View
            style={
              Object {
                "height": 60,
                "justifyContent": "center",
                "marginLeft": 20,
                "position": "absolute",
                "width": 668,
                "zIndex": 20,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "rgba(51,51,51,0.13)",
                  "fontSize": 20,
                }
              }
            >
              enter password
            </Text>
          </View>
        </TouchableWithoutFeedback>
      </View>
      <View
        style={
          Object {
            "position": "absolute",
            "right": 10,
          }
        }
      >
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "height": 50,
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#0076FF",
                  "fontSize": 12,
                  "fontWeight": "bold",
                },
                Object {
                  "color": "#0076FF",
                },
              ]
            }
          >
            random
          </Text>
        </TouchableOpacity>
      </View>
    </View>
  </View>
</View>
`;

exports[`getPassword components passwordNumber render 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "width": 750,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F8F8F8",
          "borderColor": "rgba(0,0,0,0.08)",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "space-between",
          "marginVertical": 8,
          "paddingHorizontal": 16,
          "width": 718,
        }
      }
    >
      <View
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          autoFocus={true}
          caretHidden={true}
          keyboardType="numeric"
          maxLength={6}
          onChangeText={[Function]}
          rejectResponderTermination={true}
          style={
            Object {
              "height": 60,
              "opacity": 0,
              "width": 230,
              "zIndex": 0,
            }
          }
          underlineColorAndroid="transparent"
          value=""
        />
        <TouchableWithoutFeedback
          onPress={[Function]}
        >
          <View
            style={
              Object {
                "height": 60,
                "justifyContent": "center",
                "marginLeft": 20,
                "position": "absolute",
                "width": 668,
                "zIndex": 20,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "rgba(51,51,51,0.13)",
                  "fontSize": 20,
                }
              }
            >
              enter password
            </Text>
          </View>
        </TouchableWithoutFeedback>
      </View>
      <View
        style={
          Object {
            "position": "absolute",
            "right": 10,
          }
        }
      >
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "height": 50,
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#0076FF",
                  "fontSize": 12,
                  "fontWeight": "bold",
                },
                Object {
                  "color": "#0076FF",
                },
              ]
            }
          >
            random
          </Text>
        </TouchableOpacity>
      </View>
    </View>
  </View>
</View>
`;

exports[`getPassword components should TouchableOpacity event 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "width": 750,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F8F8F8",
          "borderColor": "rgba(0,0,0,0.08)",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "space-between",
          "marginVertical": 8,
          "paddingHorizontal": 16,
          "width": 718,
        }
      }
    >
      <View
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          autoFocus={true}
          caretHidden={true}
          keyboardType="numeric"
          maxLength={6}
          onChangeText={[Function]}
          rejectResponderTermination={true}
          style={
            Object {
              "height": 60,
              "opacity": 0,
              "width": 230,
              "zIndex": 0,
            }
          }
          underlineColorAndroid="transparent"
          value="382338"
        />
        <TouchableWithoutFeedback
          onPress={[Function]}
        >
          <View
            style={
              Object {
                "height": 60,
                "justifyContent": "center",
                "marginLeft": 20,
                "position": "absolute",
                "width": 668,
                "zIndex": 20,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "color": "#0076FF",
                    "fontSize": 24,
                    "fontWeight": "bold",
                    "letterSpacing": 8,
                  },
                  Object {
                    "color": "#0076FF",
                  },
                ]
              }
            >
              382338
            </Text>
          </View>
        </TouchableWithoutFeedback>
      </View>
      <View
        style={
          Object {
            "position": "absolute",
            "right": 10,
          }
        }
      >
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "height": 50,
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#0076FF",
                  "fontSize": 12,
                  "fontWeight": "bold",
                },
                Object {
                  "color": "#0076FF",
                },
              ]
            }
          >
            random
          </Text>
        </TouchableOpacity>
      </View>
    </View>
  </View>
</View>
`;
